# scythe-example

./: .env.example  Dockerfile.worker  Makefile  README.md  allocate.py  docker-compose.yml  main.py  pyproject.toml
artifacts/: even.json  odd.json
experiments/: __init__.py  building_energy.py  lifespan.py  orbital_dynamics.py
